--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MARVEL GIFS</title>
+    <title>Employee Data Manangement</title>
     <!--jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -21,6 +21,18 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+          <div class="col">Employee Name</div>
+          <div class="col">Role</div>
+          <div class="col">Start Date</div>
+          <div class="col">Months Worked</div>
+          <div class="col">Monthly Rates ($)</div>
+          <div class="col">Total Billed($)</div>
+
+        </div>
+
+      </div>
 
 
 
