--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <!--Style CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
+
 </head>
 <body>
 
