--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="row">
-          <div class="col">Employee Name</div>
-          <div class="col">Role</div>
-          <div class="col">Start Date</div>
-          <div class="col">Months Worked</div>
-          <div class="col">Monthly Rates ($)</div>
-          <div class="col">Total Billed($)</div>
-
+    <div class="container"> Current Employees
+        <div class="col-lg-12">
+             <div class="row">
+                <div class="col-md-2">Employee Name</div>
+                <div class="col-md-2">Role</div>
+                <div class="col-md-2">Start Date</div>
+                <div class="col-md-2">Months Worked</div>
+                <div class="col-md-2">Monthly Rates ($)</div>
+                <div class="col-md-2">Total Billed($)</div>
+            </div>
         </div>
-
-      </div>
+    </div>
 
 
 
