--- a/index.html
+++ b/index.html
@@ -24,20 +24,57 @@
         </div>
     </div>
 
-    <div class="container"> Current Employees
-        <div class="col-lg-12">
-             <div class="row">
-                <div class="col-md-2">Employee Name</div>
-                <div class="col-md-2">Role</div>
-                <div class="col-md-2">Start Date</div>
-                <div class="col-md-2">Months Worked</div>
-                <div class="col-md-2">Monthly Rates ($)</div>
-                <div class="col-md-2">Total Billed($)</div>
-            </div>
+    <div class="container">
+        <div class="row">
+          <div class="col">Employee Name</div>
+          <div class="col">Role</div>
+          <div class="col">Start Date</div>
+          <div class="col">Months Worked</div>
+          <div class="col">Monthly Rates ($)</div>
+          <div class="col">Total Billed($)</div>
+
         </div>
-    </div>
 
+      </div>
 
+      <br>
+      <br>
+      <div class="container">
+      <div class="row">
+
+            <!-- Sign-Up Card-->
+            <div class="col-md-12">
+              <div class="card card-default" style="padding:1%">
+                <div class="card-header">
+                        <label for="add-employee">
+                 Add Employee </label>
+                </div>
+                <div class="card-body">
+                  <!-- Sign-up Form (note the various input "types")-->
+                  <form role="form">
+                    <div class="form-group row">
+                      <label for="employee-name-input">Employee Name:</label>
+                      <input class="form-control" id="name-input" type="text">
+                    </div>
+                    <div class="form-group row">
+                      <label for="role-input">Role:</label>
+                      <input class="form-control" id="role-input" type="text">
+                    </div>
+                    <div class="form-group row">
+                      <label for="date-input">Start Date (MM/DD/YYYY):</label>
+                      <input class="form-control" id="date-input" type="date">
+                    </div>
+                    <div class="form-group row">
+                      <label for="rate-input">Monthly Rate:</label>
+                      <input class="form-control" id="rate-input" type="number">
+                    </div>
+                    <button class="btn btn-default" id="add-employee" type="submit">Submit</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+      </div>
+      </div>
 
 
 
