--- a/index.html
+++ b/index.html
@@ -25,23 +25,75 @@
     </div>
 
     <div class="container"> Current Employees
-        <div class="col-lg-12">
-             <div class="row">
-                <div class="col-md-2">Employee Name</div>
-                <div class="col-md-2">Role</div>
-                <div class="col-md-2">Start Date</div>
-                <div class="col-md-2">Months Worked</div>
-                <div class="col-md-2">Monthly Rates ($)</div>
-                <div class="col-md-2">Total Billed($)</div>
-            </div>
-        </div>
+
+            <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th scope="col">Employee Name</th>
+                        <th scope="col">Role</th>
+                        <th scope="col">Start Date</th>
+                        <th scope="col">Months Worked</th>
+                        <th scope="col">Monthly Rates ($)</th>
+                        <th scope="col">Total Billed($)</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+
+                      </tr>
+                        <tr>
+                            <th scope="row">5</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+
+                       </tr>
+                        <tr>
+                            <th scope="row">6</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+
+                        </tr>
+                    </tbody>
+            </table>
     </div>
-
-
-
-
-
-
 
 
 
