--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <th scope="col">Months Worked</th>
                         <th scope="col">Monthly Rates ($)</th>
                         <th scope="col">Total Billed($)</th>
+                        <th scope="col"></th>
                       </tr>
                     </thead>
                     <tbody id="employeeInfo">
